wordpress-alb-ingress-http-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-wordpress-alb-http
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /wp-login.php
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-wordpress
                port:
                  number: 80
